# thimPOS

./: .gitignore  .gitmodules  AuditLog.h  CMakeLists.txt  README.md  READ_THIS_BEFORE_BUILDING_RELEASE_ASSETS.md  config.json  csdl.sqlite3  main.cc
bills/: bill_24.txt
controllers/: AccountController.cc  AiController.cc  AiController.h  InventoryController.cc  InventoryController.h  LibraryController.cc  LibraryController.h  OrderController.cc  ProductManagerController.cc  ServerManagementController.cc  ServerManagementController.h
documents/: audit_logging.md  contract_account.md  contract_ai.md  contract_inventory.md  contract_library.md  contract_orders.md  contract_products.md  license_check.md  schema.sql  spec.md
filters/: AuthNFilter.cc
license/: KeyManagerClient.cc  KeyManagerClient.h
plugins/: AiService.cc  AiService.h  AuthNRepo.cc  InventoryRepo.cc  InventoryRepo.h  InventoryService.cc  InventoryService.h  LibraryService.cc  LibraryService.h  OrderRepo.cc  OrderRepo.h  OrderService.cc  OrderService.h  ServerManagementService.cc  ServerManagementService.h  TxtPrinterService.cc
prompts/: TODO.txt
scripts/: seed-fake-data.js
static/: password-toggle.js  test.html  thimpos.css  thimpos.js
static/auth/: login.html  signup.html  test-api.html
static/manager/: accounts.html  ai-data.js  chat.html  files_library.html  inventory.html  report.html  sale-report.legacy.html  server-management.html
test/: functional_inventory_test.js
